main play-instently section added

--- a/index.html
+++ b/index.html
@@ -138,8 +138,18 @@
         </div>
         
         <div class="play-instantly">
-            <div class="play-instantly-content"></div>
-            <div></div>
+            <div class="play-instantly-content">
+                <h1><span class="play-inst-color">Play Instantly,</span> <br>
+                    No Downloads <br>
+                    No Installs.</h1>
+                <p>Play games online for free without <br>
+                    downloading. Just click the Play button <br>
+                    and play instantly in your browser.</p>
+            </div>
+            <div>
+                <img class="play-inst-img1" src="images/Rectangle 66.png" alt="">
+                <img class="play-inst-img2" src="images/Rectangle 55.png" alt="">
+            </div>
         </div>
     </main>
 
