--- a/index.html
+++ b/index.html
@@ -131,8 +131,11 @@
                     <p class="discription-color">Did you score? #unblockedgames <br> #school</p>
                 </div>
                 <div class="card card-3">
-                    <img src="images/Rectangle 7.png" alt="">
-                    <p class="discription-color">Breaking game records <br> like OG</p>
+                    <div class="crd-img">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <p class="discription-color">Breaking game records <br> like OG</p>
+                    </div>
+                    
                     <div class="hover-effect">
                         <img src="images/play-button 1.svg" alt="">
                         <h3>Watch Now</h3>
@@ -210,7 +213,7 @@
     </main>
 
 
-    <footer class="hd>
+    <footer class="hd">
         <div class="footer-container">
             <div class="gamer-logo fotter-logo">
                 <img src="images/Frame.png" alt="">
